修复：后台在售多规格商品，有某一规格库存为0后下架该商品，待售商品管理中该商品显示已售罄

--- a/weapp/mall/templates/mall/editor/offshelf_products.html
+++ b/weapp/mall/templates/mall/editor/offshelf_products.html
@@ -109,7 +109,7 @@
                                   {{/if}}
 
 								</a>
-								{{if product.stocks === 0}}
+								{{if product.is_sellout}}
 								<div class="xui-i-sellout">已售罄</div>
 								{{/if}}
 							</div>
