--- a/weapp/weixin2/templates/weixin/message/new_template_messages.html
+++ b/weapp/weixin2/templates/weixin/message/new_template_messages.html
@@ -91,18 +91,6 @@
     .template_edit_content ul li span{
         color: #1c69bb;
     }
-    .template_commit{
-        position: absolute;
-        bottom: 0;
-        text-align: center;
-        width: 100%;
-        height: 60px;
-        line-height: 60px;
-        background: rgba(0,0,0,0.2);
-    }
-    .template_commit button{
-        width: 100px;
-    }
     .cl6{
         color: #666666;
     }
@@ -141,6 +129,18 @@
     .btn-warning{
         border-radius: 3px;
     }
+    #template_message_list button{
+        min-width: 50px;
+        border-radius: 2px;
+        height: 25px;
+        line-height: 10px;
+    }
+    .xui-sync-template{
+        border-radius: 0;
+        margin-right: 0;
+        margin-top: -46px;
+        float: right;
+    }
 </style>
 {% endblock %}
 {% block content-panel %}
@@ -161,8 +161,10 @@
             <li>4、在模板库中添加特定的模板</li>
             <li>5、回到weapp，点击“更新模版”</li>
             <li>6、填写开头语和结束语，其他信息系统会自动获取无需填写，仅作预览</li>
+            <li>7、选择启用或停用模版</li>
         </ul>
     </div>
+    <button type="button" class="btn btn-primary xa-sync-template xui-sync-template">更新模版</button>
     <div class="xui-template-container xa-template-container xui-background">
         <div class="template_edit_container">
             <div class="template_edit_panel"></div>
@@ -172,9 +174,6 @@
         {% else %}
             <div>暂没有配置模版消息</div>
         {% endif %}
-        <div class="template_commit">
-            <button type="button" class="btn btn-primary xa-sync-template">更新模版</button>
-        </div>
     </div>
 </div>
 
