[f_mall_8978_yhj][侯庭飞]coding

--- a/weapp/mall/templates/mall/editor/promotion/create_coupon_rule.html
+++ b/weapp/mall/templates/mall/editor/promotion/create_coupon_rule.html
@@ -196,11 +196,16 @@
 margin-top: -29px;"></div>
     </div>
 
+
     <div class="form-group h40">
-       <label class="control-label col-sm-2 col-sm-offset-1 w110">领取权限：</label>
-       <input type="checkbox" name='reveive_rule' value="0" ><b style="vertical-align: text-bottom;font-weight:normal;display:inline-block;">仅未下单用户可领取</b>
+       <label class="control-label col-sm-2 col-sm-offset-1 w110" for="receive_rule">领取权限：</label>
+        
+        <input type="checkbox" name='receive_rule' id='receive_rule' value="1" {% if coupon_rule %} disabled="disabled" {% endif %} />
+        
+        <b style="vertical-align: text-bottom;font-weight:normal;display:inline-block;">仅未下单用户可领取</b>
     </div>
 
+ 
     <div class="panel-body mb0 xui-promotion-createFlashSalePage xa-product">
       {% if coupon_rule and promotion.products %}
       <table id="productListTable" style="background:#fff;" class="table table-bordered table-condensed mb0  xb-noTdBorder xui-productList">
@@ -401,6 +406,19 @@ $(function(){
       is_need_check_limit_product=true;
     }
   });
+ 
+   //  // 仅未下单用户可领取
+   // $('[name="receive_rule"]').click(function(o) {
+   //  if($('[name="receive_rule"]').is(":checked")){
+   //   $(this).val("1")
+     
+   //     console.log($(this).val())
+   //  }else{
+   //    $(this).val("");
+   //     console.log($(this).val())
+   //  }
+   // });
+
 
   var updateInputProductIds = function() {
       var ids = '';
@@ -493,6 +511,7 @@ $(function(){
     }
     $submit.bottonLoading({status: 'show'});
     var args = $('.xa-form').serializeObject();
+    console.log("____________",args)
     W.getApi().call({
       method: 'post',
       app: 'mall2',
@@ -505,7 +524,7 @@ $(function(){
         if (data.save_success) {
           _.delay(function() {
             window.location.href = '/mall2/coupon_rule_list/';
-          }, 500);
+          }, 5000);
         } else {
           W.showHint('error', '部分商品已发生其他操作，请查证后再操作');
           data.error_product_ids.forEach(function(id) {
